// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal closes if a esc button was pressed 1`] = `
<Modal
  isOpen={true}
  onOverlayClick={[MockFunction]}
  overlayShade="shade-2"
  padding="x6"
  shouldCloseOnEsc={true}
>
  <Portal>
    <Portal
      containerInfo={
        <div
          class="AxiomSubtree"
        >
          <div
            class="ax-modal__container ax-modal__container--padding-x6 ax-modal__container--overlay-shade-2"
          >
            <div
              class="ax-modal__mask"
            />
            <div
              class="ax-modal"
            />
          </div>
        </div>
      }
    >
      <Base
        Component="div"
        className="ax-modal__container ax-modal__container--padding-x6 ax-modal__container--overlay-shade-2"
      >
        <div
          className="ax-modal__container ax-modal__container--padding-x6 ax-modal__container--overlay-shade-2"
        >
          <div
            className="ax-modal__mask"
            onClick={[MockFunction]}
          />
          <div
            className="ax-modal"
          />
        </div>
      </Base>
    </Portal>
  </Portal>
</Modal>
`;

exports[`Modal renders 1`] = `
<Modal
  isOpen={true}
  overlayShade="shade-2"
  padding="x6"
>
  <Portal>
    <Portal
      containerInfo={
        <div
          class="AxiomSubtree"
        >
          <div
            class="ax-modal__container ax-modal__container--padding-x6 ax-modal__container--overlay-shade-2"
          >
            <div
              class="ax-modal"
            />
          </div>
        </div>
      }
    >
      <Base
        Component="div"
        className="ax-modal__container ax-modal__container--padding-x6 ax-modal__container--overlay-shade-2"
      >
        <div
          className="ax-modal__container ax-modal__container--padding-x6 ax-modal__container--overlay-shade-2"
        >
          <div
            className="ax-modal"
          />
        </div>
      </Base>
    </Portal>
  </Portal>
</Modal>
`;
